<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="eg.gov.iti.jets.weatherapp.homeScreen.view.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/favoriteFragment"
        android:name="eg.gov.iti.jets.weatherapp.favoriteScreen.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/alertFragment"
        android:name="eg.gov.iti.jets.weatherapp.alertScreen.AlertFragment"
        android:label="@string/alert"
        tools:layout="@layout/fragment_alert" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="eg.gov.iti.jets.weatherapp.settingsScreen.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
</navigation>