<?xml version="1.0" encoding="utf-8"?>
 <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".homeScreen.view.HomeFragment"
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/carolina">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="93dp"
            android:layout_height="82dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.583" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dailyRecycleview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView20" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/daily_forecast"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView19"
            app:layout_constraintTop_toBottomOf="@+id/hourlyRecycleview" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/hourlyRecycleview"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/textView19"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="casual"
            android:text="@string/hourly_forecast"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/cardView"
            app:layout_constraintTop_toBottomOf="@id/cardView" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:backgroundTint="@color/cobalt"
            android:elevation="10dp"
            app:cardCornerRadius="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="300dp">

                <TextView
                    android:id="@+id/place_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="casual"
                    android:text="TextView"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/dateTime_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="casual"
                    android:text="TextView"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/placeWeather_imageView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="104dp"
                    android:layout_marginTop="52dp"
                    android:src="@drawable/ic_launcher_foreground"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/weatherTemp_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:fontFamily="casual"
                    android:text="TextView"
                    android:textSize="30dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/placeWeather_imageView"
                    app:layout_constraintTop_toTopOf="@+id/placeWeather_imageView" />

                <TextView
                    android:id="@+id/weatherStatus_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="casual"
                    android:text="TextView"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/weatherTemp_textView"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/weatherTemp_textView"
                    app:layout_constraintTop_toBottomOf="@+id/weatherTemp_textView" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/baseline_speed_24"
                    app:layout_constraintStart_toStartOf="@+id/place_textView"
                    app:layout_constraintTop_toBottomOf="@+id/placeWeather_imageView" />

                <TextView
                    android:id="@+id/pressure_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="casual"
                    android:text="TextView"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="@+id/imageView2" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/pressure"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/pressure_textView"
                    app:layout_constraintStart_toStartOf="@+id/imageView2"
                    app:layout_constraintTop_toBottomOf="@+id/pressure_textView" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:src="@drawable/baseline_water_drop_24"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="@+id/imageView2" />

                <TextView
                    android:id="@+id/humidity_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="casual"
                    android:text="TextView"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    app:layout_constraintTop_toTopOf="@+id/imageView3" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/humidity"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/humidity_textView"
                    app:layout_constraintStart_toStartOf="@+id/imageView3"
                    app:layout_constraintTop_toBottomOf="@+id/humidity_textView" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="70dp"
                    android:src="@drawable/baseline_air_24"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    app:layout_constraintTop_toTopOf="@+id/imageView3" />

                <TextView
                    android:id="@+id/wind_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="casual"
                    android:text="TextView"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                    app:layout_constraintStart_toEndOf="@+id/imageView4"
                    app:layout_constraintTop_toTopOf="@+id/imageView4" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:fontFamily="casual"
                    android:text="@string/wind"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/wind_textView"
                    app:layout_constraintStart_toStartOf="@+id/imageView4"
                    app:layout_constraintTop_toBottomOf="@+id/wind_textView" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:src="@drawable/baseline_cloud_24"
                    app:layout_constraintStart_toStartOf="@+id/imageView2"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2" />

                <TextView
                    android:id="@+id/cloud_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="casual"
                    android:text="TextView"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                    app:layout_constraintStart_toEndOf="@+id/imageView5"
                    app:layout_constraintTop_toTopOf="@+id/imageView5" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/cloud"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/cloud_textView"
                    app:layout_constraintStart_toStartOf="@+id/imageView5"
                    app:layout_constraintTop_toBottomOf="@+id/cloud_textView" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:src="@drawable/baseline_watch_later_24"
                    app:layout_constraintStart_toStartOf="@+id/imageView3"
                    app:layout_constraintTop_toBottomOf="@+id/imageView3" />

                <TextView
                    android:id="@+id/ultraviolet_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="casual"
                    android:text="TextView"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView6"
                    app:layout_constraintStart_toEndOf="@+id/imageView6"
                    app:layout_constraintTop_toTopOf="@+id/imageView6" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/ultra_violet"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/ultraviolet_textView"
                    app:layout_constraintStart_toStartOf="@+id/imageView6"
                    app:layout_constraintTop_toBottomOf="@+id/ultraviolet_textView" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:src="@drawable/baseline_remove_red_eye_24"
                    app:layout_constraintStart_toStartOf="@+id/imageView4"
                    app:layout_constraintTop_toBottomOf="@+id/imageView4" />

                <TextView
                    android:id="@+id/visibility_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="casual"
                    android:text="TextView"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView7"
                    app:layout_constraintStart_toEndOf="@+id/imageView7"
                    app:layout_constraintTop_toTopOf="@+id/imageView7" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/visibility"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/visibility_textView"
                    app:layout_constraintStart_toStartOf="@+id/imageView7"
                    app:layout_constraintTop_toBottomOf="@+id/visibility_textView" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>